Cabecalho tem um highlight da pagina atual para que usuario saiba com exatidao em que pagina se encontra

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <nav>
                 <ol id="nav-list" class="retracted">
                     <a href="index.html">
-                    <li class="list-icons">
+                    <li class="list-icons active">
                         <div>
                             <img src="icones/home.svg" alt="">
                             
@@ -36,7 +36,7 @@
                     </li>
                 </a>
                 <a href="paginas/homeActivitiesPage.html">
-                    <li class="list-icons">
+                    <li class="list-icons inactive">
                         <div>
                             <img src="icones/todolistCheckboard.svg" alt="">
                             <p>Atividades</p>
@@ -45,7 +45,7 @@
                     </li>
                 </a>
                 <a href="paginas/noticiasPage.html">
-                    <li class="list-icons">
+                    <li class="list-icons inactive">
                         <div>
                             <img src="icones/worldIcon.svg" alt="">
                             <p>Noticias</p>
