--- a/paginas/homeActivitiesPage.html
+++ b/paginas/homeActivitiesPage.html
@@ -26,7 +26,7 @@
             <nav>
                 <ol id="nav-list" class="retracted">
                     <a href="../index.html">
-                        <li class="list-icons">
+                        <li class="list-icons inactive">
                             <div>
                                 <img src="../icones/home.svg" alt="">
                                 <p>Página Inicial</p>
@@ -35,7 +35,7 @@
                         </li>
                     </a>
                     <a href="homeActivitiesPage.html">
-                        <li class="list-icons">
+                        <li class="list-icons active">
                             <div>
                                 <img src="../icones/todolistCheckboard.svg" alt="">
                                 <p>Atividades</p>
@@ -44,7 +44,7 @@
                         </li>
                     </a>
                     <a href="noticiasPage.html">
-                        <li class="list-icons">
+                        <li class="list-icons inactive">
                             <div>
                                 <img src="../icones/worldIcon.svg" alt="">
                                 <p>Noticias</p>
