--- a/paginas/noticiasPage.html
+++ b/paginas/noticiasPage.html
@@ -24,7 +24,7 @@
             <nav>
                 <ol id="nav-list" class="retracted">
                     <a href="../index.html">
-                        <li class="list-icons">
+                        <li class="list-icons inactive">
                             <div>
                                 <img src="../icones/home.svg" alt="">
                                 <p>Página Inicial</p>
@@ -33,7 +33,7 @@
                         </li>
                     </a>
                     <a href="homeActivitiesPage.html">
-                        <li class="list-icons">
+                        <li class="list-icons inactive">
                             <div>
                                 <img src="../icones/todolistCheckboard.svg" alt="">
                                 <p>Atividades</p>
@@ -42,7 +42,7 @@
                         </li>
                     </a>
                     <a href="noticiasPage.html">
-                        <li class="list-icons">
+                        <li class="list-icons active">
                             <div>
                                 <img src="../icones/worldIcon.svg" alt="">
                                 <p>Noticias</p>
