paginas de noticias ganha noticia de destaques na parte superior, uma banner que mostrar a imagem, o titulo e parte do conteudo da noticia

--- a/index.html
+++ b/index.html
@@ -95,7 +95,6 @@
         <div class="info">
             <section class="firstSection">
                 <div class="landingFirstImg">
-                    <img src="imagens/1749556145269.jpg" alt="">
                 </div>
                 <div class="landingDescription">
                     <div>
@@ -108,7 +107,6 @@
             </section>
             <section class="firstSection">
                 <div class="landingFirstImg">
-                    <img src="imagens/1749556390655.jpg" alt="">
                 </div>
                 <div class="landingDescription">
                     <div>
@@ -121,8 +119,8 @@
             </section>
             <section class="firstSection">
                 <div class="landingFirstImg">
-                    <img src="imagens/1749556013214.jpg" alt="">
                 </div>
+                
                 <div class="landingDescription">
                     <div>
                         <h2>Nós cuidamos do ambiente</h2>
@@ -134,7 +132,6 @@
             </section>
             <section class="firstSection">
                 <div class="landingFirstImg">
-                    <img src="imagens/1749556142687.jpg" alt="" class="img">
                 </div>
                 <div class="landingDescription">
                     <div>
@@ -147,7 +144,6 @@
             </section>
             <section class="firstSection">
                 <div class="landingFirstImg">
-                    <img src="imagens/1749555964931.jpg" alt="">
                 </div>
                 <div class="landingDescription">
                     <div>
@@ -160,7 +156,6 @@
             </section>
             <section class="firstSection">
                 <div class="landingFirstImg">
-                    <img src="imagens/1749556199825.jpg" alt="">
                 </div>
                 <div class="landingDescription">
                     <div>
@@ -171,10 +166,8 @@
                     </div>
                 </div>
             </section>
-            <section>
-                <div>
-                    <iframe src="https://www.youtube.com/embed/bQh54pJBpOM?si=Evb4Bf210sgKgkR6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                </div>
+            <section class="video">
+                <iframe src="https://www.youtube.com/embed/bQh54pJBpOM?si=Evb4Bf210sgKgkR6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </section>
         </div>
 
@@ -187,6 +180,7 @@
 
     <script defer src="javascript/main.js"></script>
     <script defer src="javascript/header.js"></script>
+    <script src="javascript/imgAct.js"></script>
 
 </body>
 </html>
