--- a/paginas/homeActivitiesPage.html
+++ b/paginas/homeActivitiesPage.html
@@ -157,7 +157,7 @@
                     <div id="img-description">
                         <div class="description">
                             <h1>Comemoracao do dia 1 de junho</h1>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In excepturi ipsa explicabo eius deserunt nemo quas omnis error maxime. Ipsam corrupti...</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In excepturi ipsa explicabo eius deserunt nemo quas omnis...</p>
                         </div>
                         <a class="activities-link" href="">
                             <button class="activities-button">
