--- a/paginas/noticiasPage.html
+++ b/paginas/noticiasPage.html
@@ -61,6 +61,21 @@
 
     <main>
         <section class="info">
+            <a href="noticiasDetails/FASCIN RECEBE CARTA DE SUBSÍDIO EM CERIMÓNIA HISTÓRICA.html" class="noticia-atual">
+                <section class="noticia noticia-retraida">
+                    <div class="backImage"></div>
+                    <div class="noticia-componentes">
+                        <div class="noticia-texto">
+                            <div class="texto">
+                                <h2>FASCIN RECEBE CARTA DE SUBSÍDIO EM CERIMÓNIA HISTÓRICA...</h2>
+                                <p>
+                                    No dia 31 de Julho de 2025, o Fórum das Associações da Sociedade Civil de Namacurra (FASCIN) foi reconhecido a nível nacional com a entrega oficial da Carta de Subsídio de Assistência Técnica e Estratégica...
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+            </a>
             <a href="noticiasDetails/FASCIN RECEBE CARTA DE SUBSÍDIO EM CERIMÓNIA HISTÓRICA.html" class="noticia-link">
                 <section class="noticia noticia-retraida">
                     <div class="noticia-componentes">
