Comecando a trabalhar no rodape adicao dos links de redes sociais e mudanca da cor das fontes para  a cor branca

--- a/paginas/activitieDetails/comemoracao1dejunho.html
+++ b/paginas/activitieDetails/comemoracao1dejunho.html
@@ -118,6 +118,50 @@
         </section>
         
     </main>
+    <footer>
+        <section class="footerDescription">
+            <div>
+                <h3>Parceiros</h3>
+                <p>Lorem ipsum dolor sit</p>
+                <p>Lorem ipsum dolor sit</p>
+                <p>Lorem ipsum dolor sit</p>
+                <p>Lorem ipsum dolor sit</p>
+                <p>Lorem ipsum dolor sit</p>
+                <p>Lorem ipsum dolor sit</p>
+                <p>Lorem ipsum dolor sit</p>
+            </div>
+            <div>
+                <h3>Diversos</h3>
+                <p>Lorem ipsum dolor</p>
+                <p>Lorem ipsum dolor</p>
+                <p>Lorem ipsum dolor</p>
+                <p>Lorem ipsum dolor</p>
+                <p>Lorem ipsum dolor</p>
+                <p>Lorem ipsum dolor</p>
+                <p>Lorem ipsum dolor</p>
+            </div>
+            <div class="socialMedias">
+                <h3>Redes Sociais</h3>
+                <a href="" class="socialMedia">
+                    <img src="../../icones/eMail.svg" alt="">
+                    <p>associacaojuvenilnacaj@gmail.com</p>
+                </a>
+                <a href="" class="socialMedia">
+                    <img src="../../icones/instaLogoWhite.svg" alt="">
+                    <p>Associacao Juvenil NACAJ</p>
+                </a>
+                <a href="" class="socialMedia">
+                    <img src="../../icones/facebookLogo.svg" alt="">
+                    <p>Associacao Juvenil NACAJ</p>
+                </a>
+                <a href="" class="socialMedia">
+                    <img src="../../icones/youtubeLogoWhite.svg" alt="">
+                    <p>Associacao Juvenil NACAJ</p>
+                </a>
+            </div>
+        </section>
+        <p>© 2025 NACAJ</p>
+    </footer>
 
     <script src="../../javascript/header.js"></script>
 </body>
