--- a/paginas/noticiasPage.html
+++ b/paginas/noticiasPage.html
@@ -67,7 +67,7 @@
                     <div class="noticia-componentes">
                         <div class="noticia-texto">
                             <div class="texto">
-                                <h2>FASCIN RECEBE CARTA DE SUBSÍDIO EM CERIMÓNIA HISTÓRICA...</h2>
+                                <h2>FASCIN RECEBE CARTA DE SUBSÍDIO EM CERIMÓNIA HISTÓRICA EM NAMACURRA</h2>
                                 <p>
                                     No dia 31 de Julho de 2025, o Fórum das Associações da Sociedade Civil de Namacurra (FASCIN) foi reconhecido a nível nacional com a entrega oficial da Carta de Subsídio de Assistência Técnica e Estratégica...
                                 </p>
@@ -196,6 +196,47 @@
     </main>
 
     <footer>
+        <section class="footerDescription">
+            <div>
+                <h3>Parceiros</h3>
+                <p>Lorem ipsum dolor sit</p>
+                <p>Lorem ipsum dolor sit</p>
+                <p>Lorem ipsum dolor sit</p>
+                <p>Lorem ipsum dolor sit</p>
+                <p>Lorem ipsum dolor sit</p>
+                <p>Lorem ipsum dolor sit</p>
+                <p>Lorem ipsum dolor sit</p>
+            </div>
+            <div>
+                <h3>Diversos</h3>
+                <p>Lorem ipsum dolor</p>
+                <p>Lorem ipsum dolor</p>
+                <p>Lorem ipsum dolor</p>
+                <p>Lorem ipsum dolor</p>
+                <p>Lorem ipsum dolor</p>
+                <p>Lorem ipsum dolor</p>
+                <p>Lorem ipsum dolor</p>
+            </div>
+            <div class="socialMedias">
+                <h3>Redes Sociais</h3>
+                <a href="" class="socialMedia">
+                    <img src="../icones/eMail.svg" alt="">
+                    <p>associacaojuvenilnacaj@gmail.com</p>
+                </a>
+                <a href="" class="socialMedia">
+                    <img src="../icones/instaLogoWhite.svg" alt="">
+                    <p>Associacao Juvenil NACAJ</p>
+                </a>
+                <a href="" class="socialMedia">
+                    <img src="../icones/facebookLogo.svg" alt="">
+                    <p>Associacao Juvenil NACAJ</p>
+                </a>
+                <a href="" class="socialMedia">
+                    <img src="../icones/youtubeLogoWhite.svg" alt="">
+                    <p>Associacao Juvenil NACAJ</p>
+                </a>
+            </div>
+        </section>
         <p>© 2025 NACAJ</p>
     </footer>
 
