--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Site oficial da Associação Juvenil NACAJ - Moçambique. Descubra nossas iniciativas para apoiar crianças e jovens, promovendo educação, saúde e desenvolvimento comunitário. Junte-se a nós para fazer a diferença!">
     <title>NACAJ</title>
     <link rel="stylesheet" href="css/landingPage.css">
     <link rel="stylesheet" href="css/headerStyle.css">
@@ -197,11 +198,11 @@
             <div class="socialMedias">
                 <h3>Redes Sociais</h3>
                 <a href="" class="socialMedia">
-                    <img src="icones/eMail.svg" alt="">
+                    <img src="icones/eMailFull.svg" alt="">
                     <p>associacaojuvenilnacaj@gmail.com</p>
                 </a>
                 <a href="" class="socialMedia">
-                    <img src="icones/instaLogoWhite.svg" alt="">
+                    <img src="icones/instaLogoFullWhite.svg" alt="">
                     <p>Associacao Juvenil NACAJ</p>
                 </a>
                 <a href="" class="socialMedia">
