--- a/paginas/noticiasDetails/ASSOCIAÇÃO NACAJ PARTICIPA EM SESSÃO EXTRAORDINARIO DO CDJ EM NAMACURRA.html
+++ b/paginas/noticiasDetails/ASSOCIAÇÃO NACAJ PARTICIPA EM SESSÃO EXTRAORDINARIO DO CDJ EM NAMACURRA.html
@@ -120,11 +120,11 @@
             <div class="socialMedias">
                 <h3>Redes Sociais</h3>
                 <a href="" class="socialMedia">
-                    <img src="../../icones/eMail.svg" alt="">
+                    <img src="../../icones/eMailFull.svg" alt="">
                     <p>associacaojuvenilnacaj@gmail.com</p>
                 </a>
                 <a href="" class="socialMedia">
-                    <img src="../../icones/instaLogoWhite.svg" alt="">
+                    <img src="../../icones/instaLogoFullWhite.svg" alt="">
                     <p>Associacao Juvenil NACAJ</p>
                 </a>
                 <a href="" class="socialMedia">
