trabalhando na landing page exatamente no cabecalho, efetivamente no painel de boas vindas, track dos backgrounds por uma barra pontilhada para identificar exatamente qual background e numericamente, remocao do blur do background para uma visao mais minimalista, adicao da aba de parceiros no rodape

--- a/index.html
+++ b/index.html
@@ -63,29 +63,22 @@
         </section>
 
         <section id="landingMainText">
-            <section id="blur">
-            </section>
-            <section id="tema">
-                <h1>Bem-vindo</h1>
-                <p>Nós somos NACAJ</p>
-            </section>
-            <div id="box">
-                <div class="icon_box">
-                    <div><img src="icones/logoNACAJalinhado.png" alt=""></div>
-                    <div class="description_box">
-                        <h1>Hello</h1>
-                        <p>O nossso principal objectivo e ajudar</p>
-                    </div>
-                </div>
-                <div class="icon_box">
-                    <div><img src="icones/logoNACAJalinhado.png" alt=""></div>
-                    <div class="description_box">
-                        <h1>Hello</h1>
-                        <p>O nossso principal objectivo e ajudar</p>
-                    </div>
-                </div>
+            <div class="backgroundProgress">
+                <div class="dots"></div>
+                <div class="dots"></div>
+                <div class="dots"></div>
+                <div class="dots"></div>
+                <div class="dots"></div>
             </div>
         </section>
+        <div id="box">
+            <div class="icon_box">
+                <div class="description_box">
+                    <h1>Bem-Vindo ao NACAJ</h1>
+                    <p>Venha acompanhar-nos nesta <span>incrivel</span> jornada!</p>
+                </div>
+            </div>
+        </div>
 
         <div class="outline">
             <div id="seta-para-baixo"></div>
@@ -175,27 +168,29 @@
     </main>
     <footer>
         <section class="footerDescription">
-            <div>
+            <div class="parceiros footerBlocks">
                 <h3>Parceiros</h3>
-                <p>Lorem ipsum dolor sit</p>
-                <p>Lorem ipsum dolor sit</p>
-                <p>Lorem ipsum dolor sit</p>
-                <p>Lorem ipsum dolor sit</p>
-                <p>Lorem ipsum dolor sit</p>
-                <p>Lorem ipsum dolor sit</p>
-                <p>Lorem ipsum dolor sit</p>
+                <div class="listaParceiros">
+                    <div class="parceirosNames">
+                        <img src="imagens/1749555969642.jpg" alt="">
+                        <p>Lorem ipsum dolor sit</p>
+                    </div>
+                    <div class="parceirosNames">
+                        <img src="imagens/1749555979506.jpg" alt="">
+                        <p>Lorem ipsum dolor sit</p>
+                    </div>
+                    <div class="parceirosNames">
+                        <img src="imagens/1749556013214.jpg" alt="">
+                        <p>Lorem ipsum dolor sit</p>
+                    </div>
+                    <div class="parceirosNames">
+                        <img src="imagens/1749556054693.jpg" alt="">
+                        <p>Lorem ipsum dolor sit</p>
+                    </div>
+                    <a href="">Ver mais</a>
+                </div>
             </div>
-            <div>
-                <h3>Diversos</h3>
-                <p>Lorem ipsum dolor</p>
-                <p>Lorem ipsum dolor</p>
-                <p>Lorem ipsum dolor</p>
-                <p>Lorem ipsum dolor</p>
-                <p>Lorem ipsum dolor</p>
-                <p>Lorem ipsum dolor</p>
-                <p>Lorem ipsum dolor</p>
-            </div>
-            <div class="socialMedias">
+            <div class="socialMedias footerBlocks">
                 <h3>Redes Sociais</h3>
                 <a href="" class="socialMedia">
                     <img src="icones/eMailFull.svg" alt="">
@@ -213,6 +208,12 @@
                     <img src="icones/youtubeLogoWhite.svg" alt="">
                     <p>Associacao Juvenil NACAJ</p>
                 </a>
+            </div>
+            <div class="endereco footerBlocks">
+                <h3>Endereço</h3>
+                <p>Lorem ipsum dolor</p>
+                <p>Lorem ipsum dolor</p>
+                <p>Namacurra, Zambézia</p>
             </div>
         </section>
         <section id="landingFooter">
