adicionao o glow effect a landing page mais especificamente a mensagem de boas vindas

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <div class="icon_box">
                 <div class="description_box">
                     <h1>Bem-Vindo ao NACAJ</h1>
-                    <p>Venha acompanhar-nos nesta <span>incrivel</span> jornada!</p>
+                    <p>Venha fazer parte desta <span>incrivel</span> jornada!</p>
                 </div>
             </div>
         </div>
@@ -171,23 +171,23 @@
             <div class="parceiros footerBlocks">
                 <h3>Parceiros</h3>
                 <div class="listaParceiros">
-                    <div class="parceirosNames">
+                    <a href="" class="parceirosNames">
                         <img src="imagens/1749555969642.jpg" alt="">
                         <p>Lorem ipsum dolor sit</p>
-                    </div>
-                    <div class="parceirosNames">
+                    </a>
+                    <a href="" class="parceirosNames">
                         <img src="imagens/1749555979506.jpg" alt="">
                         <p>Lorem ipsum dolor sit</p>
-                    </div>
-                    <div class="parceirosNames">
+                    </a>
+                    <a href="" class="parceirosNames">
                         <img src="imagens/1749556013214.jpg" alt="">
                         <p>Lorem ipsum dolor sit</p>
-                    </div>
-                    <div class="parceirosNames">
+                    </a>
+                    <a href="" class="parceirosNames">
                         <img src="imagens/1749556054693.jpg" alt="">
                         <p>Lorem ipsum dolor sit</p>
-                    </div>
-                    <a href="">Ver mais</a>
+                    </a>
+                    <a href="" class="verMais">Ver mais</a>
                 </div>
             </div>
             <div class="socialMedias footerBlocks">
