--- a/paginas/homeActivitiesPage.html
+++ b/paginas/homeActivitiesPage.html
@@ -63,7 +63,7 @@
     <main>
         <section id="mae">
             <section id="imagem">
-                <div>
+                <div class="backgroundActivitiesBlur">
                     <h1>NACAJ</h1>
                     <p>(Nucleo de Apoio as Criancas Adolescentes e Jovens)</p>
                 </div>
