--- a/index.html
+++ b/index.html
@@ -173,11 +173,11 @@
                 <div class="listaParceiros">
                     <a href="" class="parceirosNames">
                         <img src="imagens/1749555969642.jpg" alt="">
-                        <p>Lorem ipsum dolor sit</p>
+                        <p>Fundação MASC</p>
                     </a>
                     <a href="" class="parceirosNames">
                         <img src="imagens/1749555979506.jpg" alt="">
-                        <p>Lorem ipsum dolor sit</p>
+                        <p>Associação Moyo Utsitsi</p>
                     </a>
                     <a href="" class="parceirosNames">
                         <img src="imagens/1749556013214.jpg" alt="">
@@ -193,10 +193,6 @@
             <div class="socialMedias footerBlocks">
                 <h3>Redes Sociais</h3>
                 <a href="" class="socialMedia">
-                    <img src="icones/eMailFull.svg" alt="">
-                    <p>associacaojuvenilnacaj@gmail.com</p>
-                </a>
-                <a href="" class="socialMedia">
                     <img src="icones/instaLogoFullWhite.svg" alt="">
                     <p>Associacao Juvenil NACAJ</p>
                 </a>
@@ -211,9 +207,16 @@
             </div>
             <div class="endereco footerBlocks">
                 <h3>Endereço</h3>
-                <p>Lorem ipsum dolor</p>
-                <p>Lorem ipsum dolor</p>
-                <p>Namacurra, Zambézia</p>
+                <p>+258 84 024 78034</p>
+                <a href="" class="enderecoBlock">
+                    <img src="icones/eMailFull.svg" alt="">
+                    <p>associacaojuvenilnacaj@gmail.com</p>
+                </a>
+                <div class="enderecoBlock">
+                    <img src="icones/locationPoint.svg" alt="">
+                    <p>Namacurra, Zambézia</p>
+                </div>
+                <p>Moçambique</p>
             </div>
         </section>
         <section id="landingFooter">
