--- a/index.html
+++ b/index.html
@@ -190,21 +190,6 @@
                     <a href="" class="verMais">Ver mais</a>
                 </div>
             </div>
-            <div class="socialMedias footerBlocks">
-                <h3>Redes Sociais</h3>
-                <a href="" class="socialMedia">
-                    <img src="icones/instaLogoFullWhite.svg" alt="">
-                    <p>Associacao Juvenil NACAJ</p>
-                </a>
-                <a href="" class="socialMedia">
-                    <img src="icones/facebookLogo.svg" alt="">
-                    <p>Associacao Juvenil NACAJ</p>
-                </a>
-                <a href="" class="socialMedia">
-                    <img src="icones/youtubeLogoWhite.svg" alt="">
-                    <p>Associacao Juvenil NACAJ</p>
-                </a>
-            </div>
             <div class="endereco footerBlocks">
                 <h3>Endereço</h3>
                 <div class="enderecoBlock">
@@ -212,11 +197,25 @@
                     <p>Namacurra, Zambézia</p>
                 </div>
                 <p>Moçambique</p>
-                <a href="" class="enderecoBlock">
+                <div class="enderecoBlock">
                     <img src="icones/eMailFull.svg" alt="">
                     <p>associacaojuvenilnacaj@gmail.com</p>
-                </a>
+                </div>
                 <p>+258 84 024 78034</p>
+            </div>
+            <div class="socialMedias footerBlocks">
+                <h3>Redes Sociais</h3>
+                <div class="socialIcons">
+                    <a href="" class="socialMedia">
+                        <img src="icones/instaLogoFullWhite.svg" alt="">
+                    </a>
+                    <a href="" class="socialMedia">
+                        <img src="icones/facebookLogo.svg" alt="">
+                    </a>
+                    <a href="" class="socialMedia">
+                        <img src="icones/youtubeLogoWhite.svg" alt="">
+                    </a>
+                </div>
             </div>
         </section>
         <section id="landingFooter">
